--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
   border: 1px solid rgb(44, 113, 134);
   border-radius: 0px;
   background-color: white;
-  color: cadetblue;
+  color: darkseagreen;
   text-shadow: 0px;
 }
 
