--- a/style.css
+++ b/style.css
@@ -83,10 +83,12 @@ button:hover {
   align-self: center;
   color: black;
   border-radius: 17px;
+  transition: all 0.5s ease-in-out;
 }
 
 #go:hover {
   font-style: italic;
+  font-size: 1rem;
 }
 
 #details {
@@ -98,6 +100,7 @@ button:hover {
   justify-self: center;
   justify-content: center;
   font-size: 12px;
+  margin: 10px;
 }
 
 #note,
