--- a/style.css
+++ b/style.css
@@ -50,10 +50,19 @@ h1 {
   color: white;
 }
 
-.btn-selected-high:hover,
-.btn-selected-med:hover,
-.btn-selected-low:hover {
+.btn-selected-high:hover {
   background-color: rgb(108, 241, 7);
+  color: black;
+}
+
+.btn-selected-med:hover {
+  background-color: rgba(108, 241, 7, 0.596);
+  color: grey;
+}
+
+.btn-selected-low:hover {
+  background-color: rgba(108, 241, 7, 0.336);
+  color: rgba(128, 128, 128, 0.685);
 }
 
 button {
